--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
       font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      margin: 0;
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
     }
     .card {
+      display: none; /* hidden until password is correct */
       background: white;
       padding: 25px;
       border-radius: 20px;
@@ -22,17 +24,9 @@
       max-width: 350px;
       box-shadow: 0 10px 30px rgba(0,0,0,0.2);
     }
-    h1 {
-      color: #e63946;
-    }
-    p {
-      color: #333;
-      line-height: 1.6;
-    }
-    .heart {
-      font-size: 40px;
-      animation: beat 1s infinite;
-    }
+    h1 { color: #e63946; }
+    p { color: #333; line-height: 1.6; }
+    .heart { font-size: 40px; animation: beat 1s infinite; }
     @keyframes beat {
       0%, 100% { transform: scale(1); }
       50% { transform: scale(1.2); }
@@ -40,19 +34,33 @@
   </style>
 </head>
 <body>
-  <div class="card">
-    <div class="heart">❤️</div>
-    <h1>Happy Valentine’s Day</h1>
-    <p>
-      My love,<br><br>
-      I made this page just for you.
-      Even in the quiet moments, know that
-      you mean the world to me.
-    </p>
-    <p>
-      Always yours,<br>
-      <strong>Kwaltom</strong>
-    </p>
-  </div>
+
+<div class="card" id="valentineCard">
+  <div class="heart">❤️</div>
+  <h1>Happy Valentine’s Day</h1>
+  <p>
+    My love,<br><br>
+    This page exists just for you.
+    You are special to me in ways I don’t always say out loud,
+    but I hope you feel it every day.
+  </p>
+  <p>
+    Always yours,<br>
+    <strong>Kwaltom</strong>
+  </p>
+</div>
+
+<script>
+  // Set your secret password here
+  const password = "❤️"; // Change this to anything only she knows
+  let input = prompt("Enter the secret word to open your Valentine 💖:");
+  
+  if (input === password) {
+    document.getElementById("valentineCard").style.display = "block";
+  } else {
+    document.body.innerHTML = "<h2 style='text-align:center; color:white;'>Oops! Wrong password 💔</h2>";
+  }
+</script>
+
 </body>
 </html>
