Change prompt message for password input

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <script>
   // Set your secret password here
   const password = "❤️"; // Change this to anything only she knows
-  let input = prompt("Enter the secret word to open your Valentine 💖:");
+  let input = prompt("Enter your password 💖:");
   
   if (input === password) {
     document.getElementById("valentineCard").style.display = "block";
